--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 </head>
 <body>
   <header>
-    <h1>E R I N  A D D I E</h1>
+    <h1>E  R  I  N   A  D  D  I  E</h1>
     <nav>
       <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Gallery</a></li>
-        <li><a href="#">About</a></li>
+        <li><a href="#">A B O U T</a></li>
+        <li><a href="#">A R C H I V E</a></li>
+        <li><a href="#">C V</a></li>
       </ul>
     </nav>
   </header>
