--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
   <main>
     <h2>Photo Gallery</h2>
     <div class="gallery">
-      <img src="images/photo1.jpg" alt="Photo 1" />
-      <img src="images/photo2.jpg" alt="Photo 2" />
-      <img src="images/photo3.jpg" alt="Photo 3" />
+      <img src="IMG _4828 2.HEIC" alt="Photo 1" />
+      <img src="IMG_6764 2.HEIC" alt="Photo 2" />
+      <img src="IMG_6217.HEIC" alt="Photo 3" />
     </div>
   </main>
 
