--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
   <main>
     <h2>Photo Gallery</h2>
     <div class="gallery">
-      <img src="IMG _4828 2.HEIC" alt="Photo 1" />
-      <img src="IMG_6764 2.HEIC" alt="Photo 2" />
-      <img src="IMG_6217.HEIC" alt="Photo 3" />
+      <img src="photo/IMG _4828 2.HEIC" alt="Photo 1" />
+      <img src="photo/IMG_6764 2.HEIC" alt="Photo 2" />
+      <img src="photo/IMG_6217.HEIC" alt="Photo 3" />
     </div>
   </main>
 
