--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900:1,100..900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css" />
 </head>
+<title>ERIN ADDIE</title>
 <body>
   <header>
     <h1>e r i n   a d d i e</h1>
