--- a/index.html
+++ b/index.html
@@ -5,25 +5,25 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>ERIN ADDIE</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900:1,100..900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css" />
 </head>
+  
 <body>
   <header>
     <h1>e r i n   a d d i e</h1>
-    <nav>
-      <ul>
-        <li><a href="#">A B O U T</a></li>
-        <li><a href="#">A R C H I V E</a></li>
-        <li><a href="#">C V</a></li>
-      </ul>
-    </nav>
   </header>
 
+  <nav>
+    <ul>
+      <li><a href="#">A B O U T</a></li>
+      <li><a href="#">A R C H I V E</a></li>
+      <li><a href="#">C V</a></li>
+    </ul>
+  </nav>
+  
   <main>
-    <h2>Photo Gallery</h2>
+    <h2></h2>
     <div class="gallery">
       <img src="photo/IMG _4828 2.HEIC" alt="Photo 1" />
       <img src="photo/IMG_6764 2.HEIC" alt="Photo 2" />
@@ -31,6 +31,8 @@
     </div>
   </main>
 
-  <script src="script.js"></script>
+ <footer>
+    <p>&copy; 2025 Your Name</p>
+  </footer>
 </body>
 </html>
